<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context="com.calculatorApp.MainActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:paddingRight="30dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text=""
            android:layout_gravity="end"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            android:id="@+id/workingsTextView"/>

        <TextView
            android:layout_width="wrap_content"
            android:paddingRight="30dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text=""
            android:textAlignment="textEnd"
            android:layout_gravity="end"
            android:textSize="45sp"
            android:id="@+id/resultTextView"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="History"
            android:id="@+id/btn_next">

        </Button>

    </LinearLayout>

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="clearOnClick"
                android:text="@string/btn_OperateC"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:onClick="bracketsOnClick"
                android:textColor="@color/white"
                android:text="@string/btn_OperandBracket"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="powerOfOnClick"
                android:text="@string/btn_OperatePower"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="divisionOnClick"
                android:text="@string/btn_OperateDivision"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="sevenOnClick"
                android:text="@string/btn_Operand7"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="eightOnClick"
                android:text="@string/btn_Operand8"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="nineOnClick"
                android:text="@string/btn_Operand9"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="timesOnClick"
                android:text="@string/btn_OperateMultiplication"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="fourOnClick"
                android:text="@string/btn_Operand4"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="fiveOnClick"
                android:text="@string/btn_Operand5"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="sixOnClick"
                android:text="@string/btn_Operand6"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="minusOnClick"
                android:text="@string/btn_OperateSubtraction"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:onClick="oneOnClick"
                android:text="@string/btn_Operand1"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/btn_Operand2"
                android:onClick="twoOnClick"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/btn_Operand3"
                android:onClick="threeOnClick"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/btn_OperateAddition"
                android:onClick="plusOnClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/btn_OperandDot"
                android:onClick="decimalOnClick"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/calcButtonTextSize"
                android:background="@null"
                android:textColor="@color/white"
                android:text="@string/btn_Operand0"
                android:onClick="zeroOnClick"/>


            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textSize="40sp"
                android:background="@color/orange"
                android:textColor="@color/white"
                android:text="@string/btn_OperateAnswers"
                android:onClick="equalsOnClick"
                android:id="@+id/equal"/>

        </LinearLayout>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>